--- a/day12/Cargo.toml
+++ b/day12/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "day11"
+name = "day12"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-ahash = "0.8.11"
+itertools = "0.13.0"
